TMS1/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-0178701a-d442-4bb4-a324-5866a5617250
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-0178701a-d442-4bb4-a324-5866a5617250
  template:
    metadata:
      labels:
        app: springboot-app-0178701a-d442-4bb4-a324-5866a5617250
    spec:
      containers:
      - name: springboot
        image: ravi8881/2e49f282-85d5-4866-af7d-8133a75e6769--bc5fa525-1f32-4c53-bf17-b98dd59ff12e-08c90922-5229-4f13-bd2c-9f2949ade579-graph:1.0.0
        ports:
        - containerPort: 8081
